Actualizar cronograma con títulos exactos del Excel, fechas correctas y semana de receso

--- a/schedule.html
+++ b/schedule.html
@@ -363,106 +363,120 @@
                         <tr>
                             <td><span class="week-number">1</span></td>
                             <td class="date">6 de agosto, 2025</td>
-                            <td class="topic">Introducción al curso</td>
-                            <td class="activities">Presentación del syllabus, objetivos del curso, metodología de evaluación</td>
+                            <td class="topic">Presentación del curso, canvas, modelo de negocio y tips para ideas de producto</td>
+                            <td class="activities">Introducción al curso, metodologías de innovación y conformación de grupos</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">2</span></td>
                             <td class="date">13 de agosto, 2025</td>
-                            <td class="topic">Fundamentos del Diseño de Productos</td>
-                            <td class="activities">Conceptos básicos, principios de diseño, metodologías</td>
+                            <td class="topic">Lean canvas, Generative AI 101, conformación de grupos</td>
+                            <td class="activities">Fundamentos de lean canvas, introducción a IA generativa y formación de equipos</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">3</span></td>
                             <td class="date">20 de agosto, 2025</td>
-                            <td class="topic">Innovación en Tecnologías de Información</td>
-                            <td class="activities">Tendencias tecnológicas, casos de estudio, análisis de innovación</td>
+                            <td class="topic">Modelos de monetización, análisis de ejemplos de empresas de tecnología y mesa redonda discusión de ideas de proyecto</td>
+                            <td class="activities">Estrategias de monetización, casos de estudio y discusión de proyectos</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">4</span></td>
                             <td class="date">27 de agosto, 2025</td>
-                            <td class="topic">Metodologías de Diseño</td>
-                            <td class="activities">Design Thinking, Lean UX, Agile methodologies</td>
-                            <td class="percentage">-</td>
+                            <td class="topic">Presentación de pitch de problema a solucionar</td>
+                            <td class="activities">Presentación del pitch del problema a solucionar</td>
+                            <td class="percentage">10%</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">5</span></td>
                             <td class="date">3 de septiembre, 2025</td>
-                            <td class="topic">Investigación de Usuarios</td>
-                            <td class="activities">Técnicas de investigación, entrevistas, encuestas, análisis de datos</td>
-                            <td class="percentage">-</td>
+                            <td class="topic">Lean canvas - análisis de ejemplos en empresas de tecnología, Running Lean Part 1</td>
+                            <td class="activities">Análisis de ejemplos en empresas de tecnología, Running Lean Part 1</td>
+                            <td class="percentage">10%</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">6</span></td>
                             <td class="date">10 de septiembre, 2025</td>
-                            <td class="topic">Definición de Problemas</td>
-                            <td class="activities">Identificación de oportunidades, definición de problemas, statement de diseño</td>
+                            <td class="topic">MVP and UI/UX, Agentic design</td>
+                            <td class="activities">Desarrollo de MVP, diseño de interfaz de usuario y diseño agéntico</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">7</span></td>
                             <td class="date">17 de septiembre, 2025</td>
-                            <td class="topic">Generación de Ideas</td>
-                            <td class="activities">Brainstorming, técnicas de creatividad, divergencia y convergencia</td>
+                            <td class="topic">Presentaciones de prueba</td>
+                            <td class="activities">Pruebas de presentación y feedback</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">8</span></td>
                             <td class="date">24 de septiembre, 2025</td>
-                            <td class="topic">Prototipado</td>
-                            <td class="activities">Tipos de prototipos, herramientas, iteración rápida</td>
+                            <td class="topic">Primera entrega del proyecto + Calificación jurados</td>
+                            <td class="activities">Presentación lean canvas, primera validación con expertos, entrevistas del problema, MVP semi funcional</td>
+                            <td class="percentage">30%</td>
+                        </tr>
+                        <tr style="background: #fff3cd;">
+                            <td><span class="week-number" style="background: #ffc107; color: #333;">R</span></td>
+                            <td class="date">29 de septiembre - 4 de octubre, 2025</td>
+                            <td class="topic">Semana de Receso</td>
+                            <td class="activities">Semana Santa - No hay clases</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">9</span></td>
-                            <td class="date">1 de octubre, 2025</td>
-                            <td class="topic">Testing y Validación</td>
-                            <td class="activities">Métodos de testing, feedback de usuarios, iteración</td>
+                            <td class="date">8 de octubre, 2025</td>
+                            <td class="topic">Buenas prácticas para un gran pitch y VC funding vs bootstrapping</td>
+                            <td class="activities">Técnicas de presentación, financiamiento y estrategias de crecimiento</td>
                             <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">10</span></td>
-                            <td class="date">8 de octubre, 2025</td>
-                            <td class="topic">Presentación de Pitch de Problema</td>
-                            <td class="activities">Presentación del pitch del problema a solucionar</td>
-                            <td class="percentage">10%</td>
+                            <td class="date">15 de octubre, 2025</td>
+                            <td class="topic">Propiedad intelectual, registro de software</td>
+                            <td class="activities">Protección de propiedad intelectual y registro de software</td>
+                            <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">11</span></td>
-                            <td class="date">15 de octubre, 2025</td>
-                            <td class="topic">Lean Canvas - Análisis de Ejemplos</td>
-                            <td class="activities">Análisis de ejemplos en empresas de tecnología, Running Lean Part 1</td>
-                            <td class="percentage">10%</td>
+                            <td class="date">22 de octubre, 2025</td>
+                            <td class="topic">Landing pages y tracción + trabajo en landing pages</td>
+                            <td class="activities">Desarrollo de landing pages y estrategias de tracción</td>
+                            <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">12</span></td>
-                            <td class="date">22 de octubre, 2025</td>
-                            <td class="topic">Trabajo Grupal en Proyectos</td>
+                            <td class="date">29 de octubre, 2025</td>
+                            <td class="topic">SEO, SEM y funeles de conversión</td>
+                            <td class="activities">Optimización para motores de búsqueda, marketing digital y conversión</td>
+                            <td class="percentage">-</td>
+                        </tr>
+                        <tr>
+                            <td><span class="week-number">13</span></td>
+                            <td class="date">5 de noviembre, 2025</td>
+                            <td class="topic">Trabajo grupal en proyectos y entrega landing page</td>
                             <td class="activities">Trabajo grupal en proyectos y entrega landing page</td>
                             <td class="percentage">10%</td>
                         </tr>
                         <tr>
-                            <td><span class="week-number">13</span></td>
-                            <td class="date">29 de octubre, 2025</td>
-                            <td class="topic">Semana de Innovación</td>
-                            <td class="activities">Actividades especiales durante la semana de innovación</td>
-                            <td class="percentage">10%</td>
-                        </tr>
-                        <tr>
                             <td><span class="week-number">14</span></td>
-                            <td class="date">5 de noviembre, 2025</td>
-                            <td class="topic">Primera Entrega del Proyecto + Calificación Jurados</td>
-                            <td class="activities">Primera entrega completa del proyecto con evaluación de jurados</td>
-                            <td class="percentage">30%</td>
+                            <td class="date">12 de noviembre, 2025</td>
+                            <td class="topic">Herramientas de análisis e indicadores + análisis feedback a la fecha</td>
+                            <td class="activities">Análisis de datos, métricas y feedback de usuarios</td>
+                            <td class="percentage">-</td>
                         </tr>
                         <tr>
                             <td><span class="week-number">15</span></td>
-                            <td class="date">12 de noviembre, 2025</td>
-                            <td class="topic">Segunda Entrega del Proyecto + Calificación Jurados</td>
-                            <td class="activities">Entrega final del proyecto con evaluación de jurados</td>
+                            <td class="date">19 de noviembre, 2025</td>
+                            <td class="topic">Semana de innovación</td>
+                            <td class="activities">Presentación en la semana de innovación: Landing page, recolección de datos de interés, MVP funcional, video del MVP</td>
+                            <td class="percentage">10%</td>
+                        </tr>
+                        <tr>
+                            <td><span class="week-number">16</span></td>
+                            <td class="date">26 de noviembre, 2025</td>
+                            <td class="topic">Segunda Entrega Proyecto + Calificación jurados</td>
+                            <td class="activities">Pitch final, MVP funcional, resultados recolección de datos y feedback de usuarios</td>
                             <td class="percentage">30%</td>
                         </tr>
                     </tbody>
