✨ Mejoras completas del proyecto ISIS2007: - Agregado contenido sobre Lean Startup y Generative AI en index.html - Añadidos enlaces de LinkedIn para todo el equipo en team.html - Creado documento-completo.html con diseño optimizado para PDF - Implementado sistema de generación de PDF con Puppeteer - Mejorado diseño visual de la sección del equipo - Generado PDF final ISIS2007-Documento-Completo.pdf

--- a/index.html
+++ b/index.html
@@ -262,6 +262,16 @@
                 en el tiempo y competitivos a nivel internacional.
             </p>
             <p>
+                <strong>Nos orientamos mucho en aplicar la metodología Lean Startup</strong>, que nos permite desarrollar productos de manera iterativa y 
+                basada en evidencia, validando hipótesis con usuarios reales desde las primeras etapas del desarrollo. Esta metodología nos ayuda a 
+                minimizar el riesgo y maximizar las posibilidades de éxito de nuestros proyectos.
+            </p>
+            <p>
+                <strong>Los proyectos tienen que usar Generative AI sí o sí</strong>, ya que consideramos que la inteligencia artificial generativa es 
+                una herramienta fundamental para la innovación en la actualidad. Los estudiantes aprenderán a integrar estas tecnologías de manera 
+                ética y efectiva en sus proyectos, explorando nuevas posibilidades de creación de valor.
+            </p>
+            <p>
                 Esta dinámica debe verse reforzada con los conocimientos y competencias que se adquieren en la segunda mitad de la formación del ingeniero. 
                 Las actividades de los estudiantes en el proyecto de grado, que tiene una vocación de síntesis, pueden ser un factor de éxito para que algunos 
                 de estos proyectos iniciados en este curso encuentren un espacio en el mundo empresarial y/o académico.
