--- a/team.html
+++ b/team.html
@@ -178,6 +178,35 @@
             margin-bottom: 10px;
         }
 
+        .social-links {
+            margin-top: 15px;
+        }
+
+        .linkedin-link {
+            display: inline-flex;
+            align-items: center;
+            background: #0077b5;
+            color: white;
+            padding: 8px 15px;
+            border-radius: 20px;
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+        }
+
+        .linkedin-link:hover {
+            background: #005885;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 119, 181, 0.3);
+        }
+
+        .linkedin-icon {
+            margin-right: 8px;
+            font-size: 1.1rem;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 10px;
@@ -222,6 +251,12 @@
                     <div class="member-name">Arturo Henao Chaparro</div>
                     <div class="role-badge">Profesor Principal</div>
                     <div class="member-email">📧 a.henao59@uniandes.edu.co</div>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/arturohenaochaparro/" target="_blank" class="linkedin-link">
+                            <span class="linkedin-icon">🔗</span>
+                            LinkedIn
+                        </a>
+                    </div>
                 </div>
 
                 <div class="team-member">
@@ -229,6 +264,12 @@
                     <div class="member-name">Juan Esteban Jiménez Benavides</div>
                     <div class="role-badge">Monitor</div>
                     <div class="member-email">📧 j.jimenezb@uniandes.edu.co</div>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/juan-esteban-jimenez-benavides-526b29191" target="_blank" class="linkedin-link">
+                            <span class="linkedin-icon">🔗</span>
+                            LinkedIn
+                        </a>
+                    </div>
                 </div>
 
                 <div class="team-member">
@@ -236,6 +277,12 @@
                     <div class="member-name">Catalina Álvarez Latorre</div>
                     <div class="role-badge">Monitor</div>
                     <div class="member-email">📧 c.alvarezl2@uniandes.edu.co</div>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/catalina-alvarez-bb06a0350/" target="_blank" class="linkedin-link">
+                            <span class="linkedin-icon">🔗</span>
+                            LinkedIn
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
