🚀 Sistema de Asistencia ISIS2007 con Integración Airtable
✨ Nuevas Funcionalidades:
- Sistema de asistencia completo con autenticación
- Integración automática con Airtable
- Ruleta de estudiantes con nombres reales
- Navegación mejorada entre páginas
- Contraseñas seguras implementadas

📊 Características Técnicas:
- Sincronización automática con Airtable
- Backup local en localStorage
- Interfaz responsive y moderna
- Sistema de roles (Profesor/Monitores)
- Exportación de datos en JSON

🔧 Archivos Principales:
- asistencia.html: Sistema de asistencia principal
- airtable-config.js: Configuración de Airtable
- airtable-service.js: Servicio de sincronización
- ruleta-estudiantes.html: Ruleta de estudiantes
- README-ASISTENCIA.md: Documentación completa

✅ Estado: Listo para producción

--- a/schedule.html
+++ b/schedule.html
@@ -17,6 +17,78 @@
             color: #333;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
+            padding-top: 80px;
+        }
+
+        /* Barra de Navegación */
+        .nav-bar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 15px 20px;
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .nav-brand {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #2c3e50;
+            text-decoration: none;
+        }
+
+        .nav-brand:hover {
+            color: #667eea;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 20px;
+            align-items: center;
+        }
+
+        .nav-link {
+            color: #7f8c8d;
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: color 0.3s ease;
+            padding: 8px 12px;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .nav-link:hover {
+            color: #667eea;
+            background: rgba(102, 126, 234, 0.1);
+        }
+
+        .nav-link.active {
+            color: #667eea;
+            background: rgba(102, 126, 234, 0.1);
+        }
+
+        .home-button {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
+        }
+
+        .home-button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
         }
 
         .container {
@@ -282,6 +354,18 @@
     </style>
 </head>
 <body>
+    <!-- Barra de Navegación -->
+    <div class="nav-bar">
+        <a href="index.html" class="nav-brand">🚀 ISIS2007</a>
+        <div class="nav-links">
+            <a href="team.html" class="nav-link">👥 Equipo</a>
+            <a href="schedule.html" class="nav-link active">📅 Cronograma</a>
+            <a href="ruleta-estudiantes.html" class="nav-link">🎯 Ruleta</a>
+            <a href="asistencia.html" class="nav-link">📊 Asistencia</a>
+            <a href="index.html" class="home-button">🏠 Inicio</a>
+        </div>
+    </div>
+
     <div class="container">
         <div class="header">
             <h1>📚 Cronograma de Clases</h1>
