--- a/asistencia.html
+++ b/asistencia.html
@@ -620,11 +620,11 @@
             'Zambrano Burbano, Mateo'
         ];
 
-        // Credenciales de acceso (en producción esto debería estar en un servidor)
+        // Credenciales de acceso - CONTRASEÑAS SEGURAS Y MEMORIZABLES
         const users = {
-            'arturo': { password: 'ArturoHenao2025!', role: 'Profesor Principal' },
-            'juanes': { password: 'JuanesMonitor2025!', role: 'Monitor' },
-            'catalina': { password: 'CatalinaMonitor2025!', role: 'Monitor' }
+            'arturo': { password: 'Arturo2025#Uniandes$Profesor!', role: 'Profesor Principal' },
+            'juanes': { password: 'Juanes2025#Monitor$Uniandes!', role: 'Monitor' },
+            'catalina': { password: 'Catalina2025#Monitor$Uniandes!', role: 'Monitor' }
         };
 
         let currentUser = null;
