--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@
                 </div>
             </a>
 
+            <!-- Sistema de Asistencia -->
+            <a href="asistencia.html" class="nav-card">
+                <span class="nav-icon">📊</span>
+                <div class="nav-title">Sistema de Asistencia</div>
+                <div class="nav-description">
+                    Control de asistencia con autenticación para profesores y monitores. Registro de fechas y estadísticas.
+                </div>
+            </a>
+
             <!-- Recursos y Materiales -->
             <div class="nav-card coming-soon">
                 <span class="nav-icon">📖</span>
@@ -281,23 +290,7 @@
                 </div>
             </div>
 
-            <!-- Proyectos y Entregas -->
-            <div class="nav-card coming-soon">
-                <span class="nav-icon">💼</span>
-                <div class="nav-title">Proyectos y Entregas</div>
-                <div class="nav-description">
-                    Información sobre entregas, fechas importantes y criterios de evaluación.
-                </div>
-            </div>
 
-            <!-- Galería de Proyectos -->
-            <div class="nav-card coming-soon">
-                <span class="nav-icon">🖼️</span>
-                <div class="nav-title">Galería de Proyectos</div>
-                <div class="nav-description">
-                    Muestra de proyectos destacados y trabajos de estudiantes del curso.
-                </div>
-            </div>
 
             <!-- Herramientas y Software -->
             <div class="nav-card coming-soon">
