🔐 Actualizar credenciales con usuarios más profesionales y eliminar sección de información de acceso

--- a/ruleta-estudiantes.html
+++ b/ruleta-estudiantes.html
@@ -923,11 +923,11 @@
         let currentStudent = null;
         let currentUser = null;
 
-        // Credenciales de acceso - CONTRASEÑAS SEGURAS Y MEMORIZABLES
-        const users = {
-            'arturo': { password: 'Arturo2025#Uniandes$Profesor!', role: 'Profesor Principal' },
-            'juanes': { password: 'Juanes2025#Monitor$Uniandes!', role: 'Monitor' },
-            'catalina': { password: 'Catalina2025#Monitor$Uniandes!', role: 'Monitor' }
+            // Credenciales de acceso - CONTRASEÑAS SEGURAS Y MEMORIZABLES
+    const users = {
+        'prof.arturo.gomez': { password: 'Arturo2025#Uniandes$Profesor!', role: 'Profesor Principal' },
+        'monitor.juanes.rodriguez': { password: 'Juanes2025#Monitor$Uniandes!', role: 'Monitor' },
+        'monitor.catalina.martinez': { password: 'Catalina2025#Monitor$Uniandes!', role: 'Monitor' }
         };
 
         // Seleccionar categoría de preguntas
