--- a/asistencia.html
+++ b/asistencia.html
@@ -620,11 +620,11 @@
             'Zambrano Burbano, Mateo'
         ];
 
-        // Credenciales de acceso - CONTRASEÑAS SEGURAS Y MEMORIZABLES
-        const users = {
-            'arturo': { password: 'Arturo2025#Uniandes$Profesor!', role: 'Profesor Principal' },
-            'juanes': { password: 'Juanes2025#Monitor$Uniandes!', role: 'Monitor' },
-            'catalina': { password: 'Catalina2025#Monitor$Uniandes!', role: 'Monitor' }
+            // Credenciales de acceso - CONTRASEÑAS SEGURAS Y MEMORIZABLES
+    const users = {
+        'prof.arturo.gomez': { password: 'Arturo2025#Uniandes$Profesor!', role: 'Profesor Principal' },
+                    'monitor.juanes.rodriguez': { password: 'Juanes2025#Monitor$Uniandes!', role: 'Monitor' },
+        'monitor.catalina.martinez': { password: 'Catalina2025#Monitor$Uniandes!', role: 'Monitor' }
         };
 
         let currentUser = null;
