--- a/ruleta-estudiantes.html
+++ b/ruleta-estudiantes.html
@@ -7,6 +7,8 @@
     
     <!-- Servicio de STRAICO AI -->
     <script src="straico-service.js"></script>
+    <!-- 🔐 Configuración segura de credenciales -->
+    <script src="config.js"></script>
     
     <style>
         * {
@@ -626,8 +628,7 @@
     </style>
 </head>
 <body>
-    <!-- 🔐 Cargar configuración segura -->
-    <script src="config.js"></script>
+
     <!-- Barra de Navegación -->
     <div class="nav-bar">
         <a href="index.html" class="nav-brand">🚀 ISIS2007</a>
