🚀 Sistema Simple Funcional - Redirección automática y enlaces actualizados

--- a/index.html
+++ b/index.html
@@ -245,6 +245,15 @@
                 </div>
             </a>
 
+            <!-- Sistema de Asistencia Simple -->
+            <a href="asistencia-simple.html" class="nav-card">
+                <span class="nav-icon">✅</span>
+                <div class="nav-title">Asistencia Simple (Recomendado)</div>
+                <div class="nav-description">
+                    Sistema simplificado de asistencia con solo campos esenciales. Más estable y fácil de usar.
+                </div>
+            </a>
+
             <!-- Equipo Docente -->
             <a href="team.html" class="nav-card">
                 <span class="nav-icon">👥</span>
