🔗 Habilitar enlace de Recursos y Materiales en página principal
- ✅ Remover estado 'Próximamente' de la sección
- 🔗 Enlazar con recursos-materiales.html
- 📖 Permitir acceso directo a documentos y material del curso
- 🎯 Integrar completamente la funcionalidad de recursos

--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
             </a>
 
             <!-- Recursos y Materiales -->
-            <div class="nav-card coming-soon">
+            <a href="recursos-materiales.html" class="nav-card">
                 <span class="nav-icon">📖</span>
                 <div class="nav-title">Recursos y Materiales</div>
                 <div class="nav-description">
                     Documentos, presentaciones, enlaces útiles y material de apoyo del curso.
                 </div>
-            </div>
+            </a>
 
 
 
