--- a/recursos-materiales.html
+++ b/recursos-materiales.html
@@ -313,7 +313,8 @@
 
         <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 10px; margin-bottom: 20px; color: white; text-align: center; backdrop-filter: blur(10px);">
             <p style="margin: 0; font-size: 0.9rem;">
-                💡 <strong>Nota:</strong> Para ver los documentos, usa el botón "Ver" que te dará opciones para descargar o abrir en nueva pestaña
+                💡 <strong>Nota:</strong> Debido a las limitaciones de GitHub Pages, los PDFs deben ser descargados para su visualización. 
+                <a href="acceso-archivos.html" style="color: #fff; text-decoration: underline;">Más información aquí</a>.
             </p>
         </div>
 
@@ -574,7 +575,7 @@
             const modalContent = document.createElement('div');
             modalContent.style.cssText = `
                 width: 90%;
-                max-width: 500px;
+                max-width: 600px;
                 background: white;
                 border-radius: 15px;
                 position: relative;
@@ -605,40 +606,34 @@
             const content = document.createElement('div');
             content.innerHTML = `
                 <h3 style="color: #2c3e50; margin-bottom: 20px;">📄 ${filename}</h3>
-                <p style="color: #555; margin-bottom: 25px; line-height: 1.6;">
-                    Para ver este documento, tienes dos opciones:
-                </p>
+                <div style="background: #f8f9fa; padding: 15px; border-radius: 10px; margin-bottom: 25px; text-align: left;">
+                    <p style="color: #555; margin: 0 0 15px 0; line-height: 1.6;">
+                        <strong>⚠️ Nota importante:</strong> Debido a las limitaciones de GitHub Pages, este archivo debe ser descargado para su visualización.
+                    </p>
+                    <p style="color: #666; margin: 0; font-size: 0.9rem;">
+                        Los archivos PDF no pueden ser visualizados directamente en GitHub Pages por razones de seguridad y configuración del servidor.
+                    </p>
+                </div>
                 <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                     <button onclick="downloadResource('${filename}')" style="
                         background: linear-gradient(135deg, #667eea, #764ba2);
                         color: white;
                         border: none;
-                        padding: 12px 24px;
+                        padding: 15px 30px;
                         border-radius: 10px;
                         cursor: pointer;
                         font-weight: 500;
                         transition: all 0.3s ease;
+                        font-size: 1rem;
                     ">
                         📥 Descargar PDF
                     </button>
-                    <a href="Archivos_de_Curso/${filename}" target="_blank" style="
-                        background: linear-gradient(135deg, #28a745, #20c997);
-                        color: white;
-                        border: none;
-                        padding: 12px 24px;
-                        border-radius: 10px;
-                        cursor: pointer;
-                        font-weight: 500;
-                        text-decoration: none;
-                        transition: all 0.3s ease;
-                        display: inline-block;
-                    ">
-                        🔗 Abrir en Nueva Pestaña
-                    </a>
                 </div>
-                <p style="color: #999; font-size: 0.9rem; margin-top: 20px;">
-                    💡 Recomendación: Descarga el archivo para mejor experiencia de lectura
-                </p>
+                <div style="margin-top: 20px; padding: 15px; background: #e8f5e8; border-radius: 10px;">
+                    <p style="color: #2d5a2d; margin: 0; font-size: 0.9rem;">
+                        💡 <strong>Consejo:</strong> Una vez descargado, puedes abrir el archivo con cualquier visor de PDF para una mejor experiencia de lectura.
+                    </p>
+                </div>
             `;
             
             closeBtn.onclick = () => {
