--- a/recursos-materiales.html
+++ b/recursos-materiales.html
@@ -302,6 +302,89 @@
 </head>
 <body>
     <div class="container">
+        <!-- Barra de navegación -->
+        <nav style="
+            background: rgba(255,255,255,0.95);
+            padding: 15px 25px;
+            border-radius: 15px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+            backdrop-filter: blur(10px);
+        ">
+            <div style="
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: wrap;
+                gap: 15px;
+            ">
+                <div style="font-weight: 600; color: #2c3e50; font-size: 1.1rem;">
+                    🚀 ISIS2007
+                </div>
+                <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                    <a href="index.html" style="
+                        color: #667eea;
+                        text-decoration: none;
+                        padding: 8px 15px;
+                        border-radius: 8px;
+                        transition: all 0.3s ease;
+                        font-weight: 500;
+                    " onmouseover="this.style.background='rgba(102,126,234,0.1)'" onmouseout="this.style.background='transparent'">
+                        🏠 Inicio
+                    </a>
+                    <a href="asistencia-simple.html" style="
+                        color: #667eea;
+                        text-decoration: none;
+                        padding: 8px 15px;
+                        border-radius: 8px;
+                        transition: all 0.3s ease;
+                        font-weight: 500;
+                    " onmouseover="this.style.background='rgba(102,126,234,0.1)'" onmouseout="this.style.background='transparent'">
+                        📊 Asistencia
+                    </a>
+                    <a href="team.html" style="
+                        color: #667eea;
+                        text-decoration: none;
+                        padding: 8px 15px;
+                        border-radius: 8px;
+                        transition: all 0.3s ease;
+                        font-weight: 500;
+                    " onmouseover="this.style.background='rgba(102,126,234,0.1)'" onmouseout="this.style.background='transparent'">
+                        👥 Equipo
+                    </a>
+                    <a href="schedule.html" style="
+                        color: #667eea;
+                        text-decoration: none;
+                        padding: 8px 15px;
+                        border-radius: 8px;
+                        transition: all 0.3s ease;
+                        font-weight: 500;
+                    " onmouseover="this.style.background='rgba(102,126,234,0.1)'" onmouseout="this.style.background='transparent'">
+                        📅 Cronograma
+                    </a>
+                    <a href="ruleta-estudiantes.html" style="
+                        color: #667eea;
+                        text-decoration: none;
+                        padding: 8px 15px;
+                        border-radius: 8px;
+                        transition: all 0.3s ease;
+                        font-weight: 500;
+                    " onmouseover="this.style.background='rgba(102,126,234,0.1)'" onmouseout="this.style.background='transparent'">
+                        🎯 Ruleta
+                    </a>
+                    <span style="
+                        color: #667eea;
+                        padding: 8px 15px;
+                        border-radius: 8px;
+                        background: rgba(102,126,234,0.1);
+                        font-weight: 600;
+                    ">
+                        📚 Recursos
+                    </span>
+                </div>
+            </div>
+        </nav>
+
         <div class="header">
             <h1>📚 Recursos y Materiales</h1>
             <p>Diseño de Productos e Innovación en TI</p>
