feat: Cambiar sección Herramientas por Actividades del Curso y crear página detallada de actividades
- Reemplazar 'Herramientas y Software' por 'Actividades del Curso' en index.html
- Crear nueva página actividades.html con cronograma completo
- Incluir descripción detallada de la actividad de Pitch con criterios de evaluación
- Agregar navegación entre páginas y diseño responsive

--- a/index.html
+++ b/index.html
@@ -283,14 +283,14 @@
 
 
 
-            <!-- Herramientas y Software -->
-            <div class="nav-card coming-soon">
-                <span class="nav-icon">🛠️</span>
-                <div class="nav-title">Herramientas y Software</div>
+            <!-- Actividades del Curso -->
+            <a href="actividades.html" class="nav-card">
+                <span class="nav-icon">📋</span>
+                <div class="nav-title">Actividades del Curso</div>
                 <div class="nav-description">
-                    Guías de uso de herramientas, software recomendado y tutoriales.
+                    Cronograma detallado de actividades, entregas y criterios de evaluación del proyecto.
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="course-info">
