fix: Corregir comportamiento inicial de actividades para que aparezcan colapsadas
- Eliminar expansión automática de la primera actividad al cargar la página
- Todas las actividades ahora aparecen colapsadas por defecto
- Mejorar UX para que el usuario decida qué información expandir
- Mantener comportamiento de solo una actividad expandida a la vez

--- a/actividades.html
+++ b/actividades.html
@@ -433,12 +433,10 @@
             }
         }
 
-        // Opcional: Expandir la primera actividad por defecto
+        // Todas las actividades comienzan colapsadas por defecto
         document.addEventListener('DOMContentLoaded', function() {
-            const firstActivity = document.querySelector('.activity-card');
-            if (firstActivity) {
-                firstActivity.classList.add('expanded');
-            }
+            // No expandir ninguna actividad por defecto
+            // Todas deben estar colapsadas inicialmente
         });
     </script>
 </body>
